5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1807_2567.log
== TEST (2019-06-13 10:15:48) 
-- CODE:
from numpy import * 
base = int(input("base:"))
while(range(size(base)>=1)):
	for j in range(0,base):
		for i in range(0 , base - j):
	print("*" * base[i])

-- ERROR:
File "XXXX", line 6
    print("*" * base[i])
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:54) 
-- CODE:
from numpy import * 
base = int(input("base:"))
while(range(size(base)>=1)):
	for j in range(0,base):
		for i in range(0 , base - j):
print("*" * base[i])

-- ERROR:
File "XXXX", line 6
    print("*" * base[i])
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:01) 
-- CODE:
from numpy import * 
base = int(input("base:"))
while(range(size(base)>=1)):
	for j in range(0,base):
		for i in range(0 , base - j):
         print("*" * base[i])

-- ERROR:
File "XXXX", line 6
    print("*" * base[i])
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:41) 
-- CODE:
from numpy import * 
base = int(input("base:"))
while(range(size(base)>=1)):
	for j in range(0,base):
		for i in range(0 , base - j):
      soma = ("*") * base[i]
print(soma)

-- ERROR:
File "XXXX", line 6
    soma = ("*") * base[i]
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:13) 
-- CODE:
from numpy import * 
base = int(input("base:"))
while(linha>=1):
	linha=0
	for j in range(0,base):
		for i in range(0 , base - j):
			soma="*"*base[i]
			linha = linha+1
         print(soma)

-- ERROR:
File "XXXX", line 9
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:18) 
-- CODE:
from numpy import * 
base = int(input("base:"))
while(linha>=1):
	linha=0
	for j in range(0,base):
		for i in range(0 , base - j):
			soma="*"*base[i]
			linha = linha+1
      print(soma)

-- ERROR:
File "XXXX", line 9
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:28) 
-- CODE:
from numpy import * 
base = int(input("base:"))
while(linha>=1):
	linha=0
	for j in range(0,base):
		for i in range(0 , base - j):
			soma="*"*base[i]
			linha = linha+1
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:33:55) 
-- CODE:
from numpy import * 
base = int(input("base:"))
linha=0
while(linha>=1):
	for j in range(0,base):
		for i in range(0 , base - j):
			soma="*"*base[i]
			linha = linha+1
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:16) 
-- CODE:
from numpy import * 
base = int(input("base:"))
linha=0
while(linha>=1):
	for j in range(0,base):
		for i in range(0 , base - j):
			soma = "*"*base[i]
			linha = linha+1
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:26) 
-- CODE:
from numpy import * 
base = int(input("base:"))
linha=0
while(linha>=1):
	for j in range(0,base):
		for i in range(0 , base - j):
			soma = "*"*base[i]
			linha = linha+1
   print(soma)

-- ERROR:
File "XXXX", line 9
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:31) 
-- CODE:
from numpy import * 
base = int(input("base:"))
linha=0
while(linha>=1):
	for j in range(0,base):
		for i in range(0 , base - j):
			soma = "*"*base[i]
			linha = linha+1
      print(soma)

-- ERROR:
File "XXXX", line 9
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:35) 
-- CODE:
from numpy import * 
base = int(input("base:"))
linha=0
while(linha>=1):
	for j in range(0,base):
		for i in range(0 , base - j):
			soma = "*"*base[i]
			linha = linha+1
         print(soma)

-- ERROR:
File "XXXX", line 9
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:42) 
-- CODE:
from numpy import * 
base = int(input("base:"))
linha=0
while(linha>=1):
	for j in range(0,base):
		for i in range(0 , base - j):
			soma = "*"*base[i]
			linha = linha+1
            print(soma)

-- ERROR:
File "XXXX", line 9
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:47) 
-- CODE:
from numpy import * 
base = int(input("base:"))
linha=0
while(linha>=1):
	for j in range(0,base):
		for i in range(0 , base - j):
			soma = "*"*base[i]
			linha = linha+1
              print(soma)

-- ERROR:
File "XXXX", line 9
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:52) 
-- CODE:
from numpy import * 
base = int(input("base:"))
linha=0
while(linha>=1):
	for j in range(0,base):
		for i in range(0 , base - j):
			soma = ("*" * base[i])
			linha = linha+1
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:38:45) 
-- CODE:
from numpy import * 
base = int(input("base:"))
linha=0
while(linha>=1):
	for j in range(0,base):
		for i in range(0 , base - j):
			soma = ("*" * base[i])
			linha = linha+1
		print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:02:37) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	print(w*(x-i))
	
for i in range(x):
	print(w*(1+i))

-- EXECUTION TIME:
0.814388
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
